# yesod-generate

./: .gitignore  .gitmodules  README.md
src/: .ghci  .gitignore  Foundation.hs  LICENSE  Main.hs  Test.hs  yesod-generate.cabal
src/codegen/: generic-handler.cg  handler-image-nullable.cg  handler-image.cg  model-to-json.cg  route-append.cg  routes-image.cg  routes.cg  widget-snippet.cg  widgets.hs.cg
src/codegen/templates/: edit.hamlet.cg  index.hamlet.cg  new.hamlet.cg  show.hamlet.cg
trials/GenTrial/: Application.hs  Foundation.hs  GenTrial.cabal  LICENSE  devel.hs
trials/GenTrial/Handler/: Root.hs
trials/GenTrial/config/: models  routes  sqlite.yml
trials/GenTrial/deploy/: Procfile
trials/GenTrial/templates/foo/: index.hamlet  new.hamlet  show.hamlet
