name:            yesod-generate
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          Max Cantor <i@cantor.mx>
maintainer:      Max Cantor <i@cantor.mx>
synopsis:        Rails-style generators for yesod
description:
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/maxcan/yesod-generate

extra-source-files:
  codegen/*.cg

flag ghc7

flag threaded
    default: True
    description: Build with support for multithreaded execution

executable             yesod-generate
    if flag(ghc7)
        build-depends:   base                  >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                  >= 4        && < 4.3
    if os(windows)
        cpp-options:     -DWINDOWS
    build-depends:     attoparsec         >= 0.10
                     , text               >= 0.11         && < 0.12
                     , monads-tf
                     , system-filepath
                     , system-fileio
                     , directory
                     , persistent         >= 0.8          && < 0.9
                     , bytestring
                     , cmdargs            >= 0.9.3
                     , shakespeare-text   >= 0.11
                     , template-haskell
                     , vcs-revision
    ghc-options:       -Wall
    if flag(threaded)
        ghc-options:    -threaded
    main-is:           Main.hs

source-repository head
  type: git
  location: git://github.com/maxcan/yesod-generate.git
  
